--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
     
     <aside class="sort_display" >
-  				<button id="AZ" onclick="ascending()">Ascending</button>
-        	<button id="ZA" onclick="descending()">Descending</button>
+  				<button id="AZ" onclick="Ascending()">Ascending</button>
+        	<button id="ZA" onclick="Descending()">Descending</button>
           <ol class="display_names">
 
 					</ol>	
@@ -70,49 +70,6 @@
 		</main>
   
   	<script src="superhero.js"></script>
-	  <script type="module">
-
-		// Import the functions you need from the SDKs you need
-	  
-		import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.1/firebase-app.js";
-	  
-		import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.1/firebase-analytics.js";
-	  
-		// TODO: Add SDKs for Firebase products that you want to use
-	  
-		// https://firebase.google.com/docs/web/setup#available-libraries
-	  
-	  
-		// Your web app's Firebase configuration
-	  
-		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-	  
-		const firebaseConfig = {
-	  
-		  apiKey: "AIzaSyAwR81xh6Q9z56s50CNt3nJ8iajEH2V8Lc",
-	  
-		  authDomain: "tech-tycoons-d510f.firebaseapp.com",
-	  
-		  projectId: "tech-tycoons-d510f",
-	  
-		  storageBucket: "tech-tycoons-d510f.appspot.com",
-	  
-		  messagingSenderId: "206986723850",
-	  
-		  appId: "1:206986723850:web:0dfc99160c4ec31ece55f3",
-	  
-		  measurementId: "G-ZZ0MC9S5TE"
-	  
-		};
-	  
-	  
-		// Initialize Firebase
-	  
-		const app = initializeApp(firebaseConfig);
-	  
-		const analytics = getAnalytics(app);
-	  
-	  </script>
 	  <script src="features.js"></script>
 
 
